# home-assistant-spothinta

./: .gitignore  README.md  hacs.json  info.md  pyproject.toml
.github/: labels.yml  release-drafter.yml
.github/workflows/: hassfest.yaml  labels.yaml  linting.yaml  release-drafter.yaml  tests.yaml  typing.yaml  validate.yaml
custom_components/spothinta/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  strings.json
custom_components/spothinta/translations/: en.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_init.py  test_sensor.py
