[tool.poetry]
name = "home-assistant-spothinta"
version = "0.1.1"
description = "Custom component for Home Assistant for fetching energy spot prices for the Nordic and Baltic market."
authors = ["Sebastian Lövdahl <sebastian.lovdahl@hibox.fi>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "spothinta", from = "custom_components"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
spothinta-api = "^0.3.0"

[tool.poetry.group.dev.dependencies]
homeassistant = ">=2023.5.0"
pytest-homeassistant-custom-component = ">=0.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = ">=1.0,<1.4"
pylint = "^2.17.4"
yamllint = "^1.32.0"

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "homeassistant",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true

[tool.pylint.MASTER]
extension-pkg-whitelist = [
  "pydantic"
]
ignore = [
  "tests"
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "duplicate-code",
    "format",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
