[tool.poetry]
name = "home-assistant-spothinta"
version = "0.0.0"
description = "Custom component for Home Assistant for fetching energy spot prices for the Nordic and Baltic market."
authors = ["Sebastian Lövdahl <sebastian.lovdahl@hibox.fi>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "spothinta", from = "custom_components"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
spothinta-api = "^0.5.0"

[tool.poetry.group.dev.dependencies]
homeassistant = "~2024.5.3"
pytest-homeassistant-custom-component = ">=0.13.0"
ruff = "^0.4.4"
mypy = ">=1.0,<1.11"
pylint = "^3.2.2"
yamllint = "^1.35.1"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# On top of the default `select` (`E`, `F`), enable isort (`I`).
extend-select = ["I"]

[tool.ruff.lint.isort]
# will group `import x` and `from x import` of the same module.
force-sort-within-sections = true
known-first-party = [
    "homeassistant",
    "tests",
]
forced-separate = [
    "tests",
]
combine-as-imports = true

[tool.pylint.MASTER]
extension-pkg-whitelist = [
  "pydantic"
]
ignore = [
  "tests"
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "duplicate-code",
    "format",
    "unexpected-keyword-arg",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
